apparently this was an old version, updated and added description of hemo spectrum zen animation

--- a/PlantJavascript/index.html
+++ b/PlantJavascript/index.html
@@ -1,13 +1,13 @@
 <html>
 	<head>
 		<script type="text/javascript" src="javascripts/jquery-1.7.1.min.js"></script>
-        <script type="text/javascript" src="javascripts/Color/PlantWorld.js"></script>
-        <script type="text/javascript" src="javascripts/Color/PlantTile.js"></script>
-        <script type="text/javascript" src="javascripts/Color/Plant.js"></script>
+        <script type="text/javascript" src="javascripts/PlantWorld.js"></script>
+        <script type="text/javascript" src="javascripts/PlantTile.js"></script>
+        <script type="text/javascript" src="javascripts/Plant.js"></script>
 
 		<script type="text/javascript">
             var plantWorld;
-            var block_height = 6;
+            var block_height = 10;
             var canvas;
             var context;
 
@@ -25,10 +25,9 @@
 	<body>
 		
 		<br>
-		<canvas id="canvas" width="400" height="400">  </canvas>
-        <br>
+		<canvas id="canvas" width="500" height="500">  </canvas>
         <a href = "plant.html">Plant</a>  |  <a href = "color.html">Color</a>  | |  <a href = "homestuck_color.html">Hemospectrum</a>  |  <a href = "electricity.html">Electricity</a>
 
-		
-	</body>
+
+    </body>
 </html>
