--- a/PlantJavascript/plant.html
+++ b/PlantJavascript/plant.html
@@ -26,7 +26,7 @@
 		<br>
 		<canvas id="canvas" width="500" height="500">  </canvas>
         <br>
-        <a href = "plant.html">Plant</a>  |  <a href = "color.html">Color</a>  |  <a href = "electricity.html">Electricity</a>
+        <a href = "plant.html">Plant</a>  |  <a href = "color.html">Color</a>  | |  <a href = "homestuck_color.html">Hemospectrum</a>  |  <a href = "electricity.html">Electricity</a>
 
 		
 	</body>
