--- a/PlantJavascript/electricity.html
+++ b/PlantJavascript/electricity.html
@@ -27,7 +27,7 @@
 		<br>
 		<canvas id="canvas" width="300" height="300">  </canvas>
         <br>
-        <a href = "plant.html">Plant</a>  |  <a href = "color.html">Color</a>  |  <a href = "electricity.html">Electricity</a>
+        <a href = "plant.html">Plant</a>  |  <a href = "color.html">Color</a>  | |  <a href = "homestuck_color.html">Hemospectrum</a>  |  <a href = "electricity.html">Electricity</a>
 		
 	</body>
 </html>
