ready to deploy

--- a/getWellSoonKR.html
+++ b/getWellSoonKR.html
@@ -50,7 +50,7 @@
 			
 			function updateButton(){
 				var cost = Math.ceil(5 + Math.pow(num_interns/2 , 2));
-				var html = '<button  onclick="hireIntern()"> Hire Intern (' + cost + ' Reputation) </button>';
+				var html = '<button  onclick="hireIntern()"> Recruit Observer (' + cost + ' Well Wishes) </button>';
 				$("#hire_intern").html(html);
 			}
 			
@@ -104,7 +104,7 @@
 		<td><div id = "instructions">Click to create your "Get Well Soon Card".</div><br><br><br>
 		<div id = "reputation">0 Well Wishes Obtained.</div><br><br>
 		<div id = "interns"> 0 Interns are working tirelessly for your glory.</div>  <br><div id="time_between_clicks"> </div> <br><br>
-		<div id = "hire_intern"> <button onclick="hireIntern()"> Hire Intern (5 Reputation) </button></div>
+		<div id = "hire_intern"> <button onclick="hireIntern()"> Recruit Observer (5 Well Wishes) </button></div>
 		
 		</td>
 		</tr></table>
