--- a/getWellSoonKR.html
+++ b/getWellSoonKR.html
@@ -100,6 +100,11 @@
 		</style>
 	</head>
 	<body>
+	<audio id = "bgAudio" controls autoplay loop>
+		<source src="A_little_bit_of_good_karma.ogg" type="audio/ogg">
+		<source src="A_little_bit_of_good_karma.mp3" type="audio/mpeg">
+		Your browser does not support the audio element.
+	</audio>
 		<table><tr><td><canvas id="canvas" width="1000" height="1000">  </canvas></td>
 		<td><div id = "instructions">Click to create your "Get Well Soon Card".</div><br><br><br>
 		<div id = "reputation">0 Well Wishes Obtained.</div><br><br>
